attempts to adjust footer to resolve overlap bugs

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -126,6 +126,7 @@ footer {
   display: flex;
   align-items: center;
 	position: fixed;
+	margin-top: 75px;
 	width: 100%;
 	bottom: 0px;
 }
